Fixed cart-dropdown scroll overflow to only appear when needed.

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -21,6 +21,8 @@
       display: flex;
       flex-direction: column;
       overflow: scroll;
+      overflow-y: auto;
+      overflow-x: auto;
     }
   
     button {
